--- a/config.json
+++ b/config.json
@@ -12,3 +12,4 @@ Temporary commit content 134
 Temporary commit content 137
 Temporary commit content 141
 Temporary commit content 148
+Temporary commit content 152
