--- a/config.json
+++ b/config.json
@@ -2,3 +2,4 @@ Temporary commit content 22
 Temporary commit content 28
 Temporary commit content 31
 Temporary commit content 36
+Temporary commit content 67
